fixed issue on safari

--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ section {
 
 h1 {
 	font-family: 'Clicker Script', cursive;
-	font-weight:bolder;
 	font-size:38pt;
 	margin-bottom:-15px;
 	text-align:center;
